# BuildWise

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/core/: config.py
app/infrastructure/database/: base.py  session.py
app/infrastructure/database/models/: __init__.py  build.py  category.py  commerce.py  components.py  enums.py  product.py  user.py
docs/: architecture.md
